@@ -1,3 +1,8 @@
 #! /usr/bin/make -f
 %:
 	dh --with germinate $@
+
+override_dh_clean:
+	dh_clean
+	./update-tool clean
+
