@@ -1,25 +1,0 @@
-# -------------
-# Ubuntu sources
-# -------------
-deb http://archive.ubuntu.com/ubuntu/ lucid main restricted universe multiverse
-#deb-src http://archive.ubuntu.com/ubuntu/ lucid main restricted universe multiverse
-
-# updates
-deb http://archive.ubuntu.com/ubuntu/ lucid-updates main restricted universe multiverse
-#deb-src http://archive.ubuntu.com/ubuntu/ lucid-updates main restricted universe multiverse
-
-# security
-deb http://archive.ubuntu.com/ubuntu/ lucid-security main restricted universe multiverse
-#deb-src http://archive.ubuntu.com/ubuntu/ lucid-security main restricted universe multiverse
-
-# proposed
-deb http://archive.ubuntu.com/ubuntu/ lucid-proposed main restricted universe multiverse
-#deb-src http://archive.ubuntu.com/ubuntu/ lucid-proposed main restricted universe multiverse
-
-# backports
-deb http://archive.ubuntu.com/ubuntu/ lucid-backports main restricted universe multiverse
-#deb-src http://archive.ubuntu.com/ubuntu/ lucid-backports main restricted universe multiverse
-
-# partner
-deb http://archive.canonical.com/ubuntu/ lucid partner
-# deb-src http://archive.canonical.com/ubuntu/ lucid partner
